@@ -21,6 +21,8 @@ Version 1.0.7.20
   -  Fixed outdated documentation URL of Perl language file (RuralMoon by BenBE)
   -  Fixed tab replacement code not generating the correct number of spaces in
      some cases (Guillermo Calvo)
+  -  Added language files
+     * Motorola 68k Assembler (for MC68HC908GP32 Microcontroller) (BenBE)
 Version 1.0.7.19
   -  Added language files
      * X++ (Simon Butcher)
